--- a/template/contactUs.html
+++ b/template/contactUs.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Own CSS-->
-    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
@@ -20,7 +20,7 @@
         <div class="row">
           <div class="column">
             <br><br><br><br>
-            <img src="/img/contractus.jpg" style="width:100%">
+            <img src="img/contractus.jpg" style="width:100%">
           </div>
           <div class="column">
             <form action="/action_page.php">
